# rust-teapot

./: Cargo.toml  README.md
src/: main.rs  shader.fsh  shader.vsh  teapot.rs
